# matchstick

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: orderbook.rs
docs/: performance.md
src/: lib.rs  main.rs
src/benches/: orderbook.rs
src/benchmarking/: harness.rs  stats.rs
src/kraken/: adapter.rs  client.rs  messages.rs  mod.rs
