[package]
name = "matchstick"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.43"
criterion = "0.8.1"
futures-util = "0.3.31"
hdrhistogram = "7.5.4"
hmac = "0.12.1"
http = "1.4.0"
inferno = "0.12.4"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = "1.49.0"
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
