[package]
name = "matchstick"
version = "0.1.0"
edition = "2024"

[dependencies]
matchbook = { git = "https://github.com/PaddyConnolly/matchbook" }
base64 = "0.22.1"
chrono = "0.4.43"
criterion = "0.8.1"
futures-util = "0.3.31"
hdrhistogram = "7.5.4"
hmac = "0.12.1"
http = "1.4.0"
inferno = "0.12.4"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["std", "env-filter"] }
dotenvy = "0.15.7"
battery = "0.7.8"
sysinfo = "0.37.2"
clap = "4.5.54"

[[bench]]
name = "orderbook"
harness = false

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
